--- a/src/layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/src/layouts/DefaultLayout/DefaultLayout.module.scss
@@ -1,7 +1,9 @@
 .wrapper {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-x: hidden;
 }
 
 .container {
@@ -14,4 +16,32 @@
 
 .content {
     flex: 1;
+}
+h3 {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 24px;
+    letter-spacing: -0.028px;
+    display: inline-block;
+    margin-right: 4px;
+}
+h4 {
+    font-weight: 400;
+    font-size: 14px;
+    letter-spacing: 0.093px;
+    display: inline-block;
+    line-height: 28px;
+}
+
+.RBQNBZUJVG {
+    position: fixed;
+    display: flex;
+    bottom: 50px;
+    right: 20px;
+    justify-content: center;
+    align-items: center;
+    width: 32px;
+    height: 32px;
+    border-radius: 52px;
+    background-color: #fe2c55;
 }
