--- a/src/layouts/components/Search/Search.module.scss
+++ b/src/layouts/components/Search/Search.module.scss
@@ -1,6 +1,6 @@
 .search,
 .search-result {
-    width: 361px;
+    flex-basis: calc(100%);
 }
 
 .search {
@@ -89,5 +89,13 @@
 
     &:active {
         background-color: rgba(22, 24, 35, 0.06);
+    }
+}
+
+.KMJDNQTSBQ {
+    display: flex;
+    flex-basis: 27%;
+    @media (max-width: 425px) {
+        display: none !important;
     }
 }
